# LGM

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  my_new_lgm.lgm  vcpkg.json
.github/workflows/: ci.yml  release.yml  wiki.yml
Examples/: Electrical.lgm  Gyrator.lgm  Motor.lgm  README.md  TransformerCacade.lgm  TransformerCascade.lgm
docs/: LinearGrpahModelingBasics.txt  TwoPortsBasics.txt  analysis.md  canvas.md  model.md  releases.md  state_space_from_normal_tree.md
scripts/: package-linux.sh  package-macos.sh  package-windows.ps1  sync-wiki.py
scripts/installer/: LGM.iss
src/: canvas.cpp  canvas.h  canvas_items.cpp  canvas_scene_delete.cpp  canvas_scene_graph.cpp  canvas_scene_input.cpp  canvas_undo.cpp  canvas_view.cpp  elemental_equation.cpp  elemental_equation.h  latex_widget.cpp  latex_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  normal_tree.cpp  state_space.cpp  trademarks.h
src/assets/: app.rc  assets.qrc
src/assets/guides/: algorithm_offer  multiple_normal_tree_finding.md  quick_start.md  state_space_from_normal_tree.md
src/canvas/: canvas.h  canvas_document.cpp  canvas_items.cpp  canvas_scene_delete.cpp  canvas_scene_graph.cpp  canvas_scene_input.cpp  canvas_undo.cpp  canvas_view.cpp
src/canvas/document/: document_detail.h  document_io.cpp  load_helpers.cpp
src/canvas/items/: branch_item.cpp  geometry.cpp  geometry.h  item_includes.h  node_item.cpp  two_port_item.cpp
src/canvas/scene/: scene_detail.cpp  scene_detail.h  scene_lifecycle.cpp  scene_merge.cpp  scene_normal_tree.cpp
src/canvas/undo/: commands.cpp
src/model/: elemental_equation.cpp  elemental_equation.h  normal_tree.cpp  normal_tree.h  state_space.cpp  state_space.h  state_space_detail.h  state_space_eliminate.cpp  state_space_graph.cpp  state_space_latex.cpp  state_space_matlab.cpp  state_space_sym.cpp
src/model/elemental_equation/: constants.cpp  naming.cpp  symbols.cpp  topology.cpp
src/model/normal_tree/: build.cpp  enumerate.cpp  normal_tree.cpp  normal_tree_detail.h
src/model/state_space/: state_space.cpp  state_space_constraints.cpp  state_space_context.cpp  state_space_context.h  state_space_matrix.cpp  state_space_reduce.cpp  state_space_reduce.h  state_space_reflect.cpp  state_space_states.cpp
src/ui/: analyze_window.cpp  analyze_window.h  app_log.cpp  app_log.h  app_settings.cpp  app_settings.h  app_shortcuts.cpp  app_shortcuts.h  app_update.cpp  app_update.h  guide_window.cpp  guide_window.h  latex_widget.cpp  main.cpp  mainwindow.cpp  mainwindow.h  settings_window.cpp  settings_window.h  tool_icons.cpp  tool_icons.h
src/ui/mainwindow/: common_includes.h  detail.cpp  detail.h  file.cpp  mainwindow.cpp
src/ui/mainwindow/chrome/: docks.cpp  menu.cpp  theme.cpp  toolbar.cpp
src/ui/mainwindow/panels/: object_tree.cpp  panel_tabs.cpp  property_panel.cpp  state_space_panel.cpp
wiki/: Building-from-source.md  FAQ.md  Home.md  _Sidebar.md
